[project]
name = "builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
]

[tool.pyright]
exclude = [ ".venv" ]
venvPath = "."
venv = ".venv"
# include = [
# ]
executionEnvironments = [
  { root = "src" },
]
