[project]
name = "builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "docker>=7.1.0",
    "pydantic-settings>=2.9.1",
]

[tool.pyright]
exclude = [ ".venv" ]
venvPath = "."
venv = ".venv"
# include = [
# ]
executionEnvironments = [
  { root = "src" },
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
